--- a/Form.html
+++ b/Form.html
@@ -1,23 +1,44 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title><senter>My forme Ragistation </senter></title>
+    </head>
     <body>
-        <form action="C:\Users\vipul\OneDrive\Desktop\HTML NUV\WWE-Smackdown-John-Cena-645x370.webp">
-        <label for="fname" >First Name</label><br>
-        <input type="text" id="fanem" name="fname" value="Jhon"><br>
+        <!-- firstname -->
+        <label>first name </label><br>
+        <input type="text" id+="fname" name="fname"><br>
 
-        <label for="lname">Last Name</label><br>
-        <input type="text" id="lname" name="lname" value="Cena"><br>
+        <!-- Last name -->
+        <label>Last name</label><br>
+        <input type="text" id="Lname" name="lname"><br>
 
-        <label for="enroll">Enrollment ID</label><br>
-        <input type="number" id="enroll" name="enroll" value="23000306"><br>
-
-        <label for="gender">Gender</label><br>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label><br>
-
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
+        <!-- Email -->
+        <label>Email</label><br>
+        <input type="Email" id="Email" name="Email"><br>
         
+        <!-- Age -->
+        <label>Age</label><br>
+        <input type="number" id="Age" Number="Age"><br>
 
-        <input type="submit" value="submit">
-    </form>
-    </body>
+        <!-- Gender -->
+        <label for="Gender">Gender</label><br>
+        <input type="radio" id="male" name="Gender" value="Female">Male<br>
+        <input type="radio" id="male" name="Gender" value="Female">Female<br>
+
+        <!-- Address -->
+        <label>Address</label><br>
+        <textarea rows="5px" cols="50px"></textarea><br>
+
+        <!-- Education Qualification -->
+        <label for="Education Qualification">Education Qualification</label>
+        <select>
+            <option>B.com</option>
+            <option>BCA</option>
+            <option>BBA</option>
+            <option>MBA</option>
+            <option>MCA</option>
+            <option>M.COM</option>
+        </select>
+        
+        </body>
+</html> 
